feat(pagination): add some query params for pagination
