# apps/server/src/controllers/product/get-all.ts
@@ -1,26 +1,43 @@
 import { ProductModel } from '@/db/models';
 import { mapperProductDTO } from './mappers';
 import type { Request, Response } from 'express';
-import { productsGetAllQueryResponseSchema } from '@repo/contract/server/schemas';
+import {
+  productsGetAllQueryParamsSchema,
+  productsGetAllQueryResponseSchema,
+} from '@repo/contract/server/schemas';
 import type { PaginatedMeta } from '@repo/contract/types';
 
-export const getAllHandler = async (_req: Request, res: Response) => {
-  const products = (await ProductModel.find()) || [];
-  const productsDTO = products.map(mapperProductDTO);
+const PAGE_SIZE = 2;
+
+export const getAllHandler = async (req: Request, res: Response) => {
+  const { query } = req;
+  const { page: pageStr, pageSize: pageSizeStr } =
+    productsGetAllQueryParamsSchema.parse(query);
+  const page = pageStr ? +pageStr : 1;
+  const pageSize = pageSizeStr ? +pageSizeStr : PAGE_SIZE;
+  const total = await ProductModel.countDocuments();
+  const totalPages = Math.ceil(total / PAGE_SIZE);
+
+  const productsDTO =
+    (
+      await ProductModel.find()
+        .skip((page - 1) * PAGE_SIZE)
+        .limit(pageSize)
+    ).map(mapperProductDTO) || [];
+
   const paginatedMeta: PaginatedMeta = {
-    page: 1,
-    pageSize: 10,
-    prevPage: 0,
-    nextPage: 2,
-    totalPages: 5,
-    total: productsDTO.length,
+    total,
+    totalPages,
+    page,
+    pageSize,
+    hasPrevPage: page - 1 > 0,
+    hasNextPage: page < totalPages,
   };
-  console.log({ data: productsDTO, meta: paginatedMeta });
+
   const validProductsDTO = productsGetAllQueryResponseSchema.parse({
     data: productsDTO,
     meta: paginatedMeta,
   });
-  console.log('🚀 ~ getAllHandler ~ validProductsDTO:', validProductsDTO);
 
   return res.status(200).json(validProductsDTO);
 };
