# packages/contract/kubb/schemas/paginatedMetaSchema.ts
@@ -1,4 +1,4 @@
 import { z } from "zod";
 
 
-export const paginatedMetaSchema = z.object({ "page": z.number(), "pageSize": z.number(), "total": z.number(), "totalPages": z.number(), "nextPage": z.number(), "prevPage": z.number() });
+export const paginatedMetaSchema = z.object({ "page": z.number(), "pageSize": z.number(), "total": z.number(), "totalPages": z.number(), "hasNextPage": z.boolean(), "hasPrevPage": z.boolean() });
