# packages/contract/kubb/schemas/productsGetAllSchema.ts
@@ -3,7 +3,9 @@ import { paginatedMetaSchema } from "./paginatedMetaSchema";
 import { productSchema } from "./productSchema";
 import { serverErrorSchema } from "./serverErrorSchema";
 
- /**
+
+export const productsGetAllQueryParamsSchema = z.object({ "page": z.string(), "pageSize": z.string() });
+/**
  * @description The request has succeeded.
  */
 export const productsGetAll200Schema = z.object({ "meta": z.lazy(() => paginatedMetaSchema), "data": z.array(z.lazy(() => productSchema)) });
